--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.19.0
   provider: ^4.3.2+2 # for State management
+  carousel_slider: ^2.3.1
 
 dev_dependencies:
   flutter_test:
