--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.19.0
-  provider: ^4.3.2+2 # for State management
   carousel_slider: ^2.3.1
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
