--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_auth: ^0.18.3
   cloud_firestore: ^0.14.3
   pie_chart: ^4.0.1
+  flutter_email_sender: ^3.0.1
+  clipboard: ^0.1.2+8
+  random_string: ^2.1.0
 
 dev_dependencies:
   flutter_test:
