club image upload added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -32,6 +32,7 @@ dependencies:
   carousel_slider: ^2.3.1
   font_awesome_flutter: ^8.8.1
   http: ^0.12.2
+  dio:
   shared_preferences: ^0.5.12+4
   flutter_spinkit: ^4.1.2+1
   firebase_core: ^0.5.2
@@ -41,6 +42,7 @@ dependencies:
   flutter_email_sender: ^3.0.1
   clipboard: ^0.1.2+8
   random_string: ^2.1.0
+  image_picker: ^0.6.7+14
 
 dev_dependencies:
   flutter_test:
