--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,11 +26,12 @@
 		<string>LaunchScreen</string>
 		<key>UIMainStoryboardFile</key>
 		<string>Main</string>
-
+		<key>io.flutter.embedded_views_preview</key>
+		<true />
+		<key>NSCameraUsageDescription</key>
+		<string>This app needs camera access to scan QR codes</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>Allow access to photo library</string>
-		<key>NSCameraUsageDescription</key>
-		<string>Allow access to camera to capture photos</string>
 		<key>NSMicrophoneUsageDescription</key>
 		<string>Allow access to microphone</string>
 
